# core-dumper

./: CMakeLists.txt  CoreWriter.cpp  Elf.cpp  Elf.h  ElfHeader.cpp  ElfHeader.h  Ident.cpp  Ident.h  MemoryDump.S  MemoryInformation.h  NoteSection.cpp  NoteSection.h  ProcessInfo.cpp  ProcessInfo.h  ProcessStatus.cpp  ProcessStatus.h  ProgramHeader.cpp  ProgramHeader.h  SectionHeader.cpp  SectionHeader.h  Types.h  crash_dummy.cpp  readme.md
Include/: CoreWriter.h  crash.h
